scroll effect on image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>bg-img-scroll-effect</title>
 </head>
 <body>
-    <div class="bg-image" id="bg-image"></div>
+    <!-- <div class="bg-image" id="bg-image"></div>
     <div class="container">
         <h1>welcome to our website</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatibus, sequi atque nemo velit dolorem expedita minima consequatur ratione iste et quae explicabo culpa aliquid, ea unde quasi tempora? Sed.</p>
@@ -26,7 +26,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatibus, sequi atque nemo velit dolorem expedita minima consequatur ratione iste et quae explicabo culpa aliquid, ea unde quasi tempora? Sed.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, voluptatibus, sequi atque nemo velit dolorem expedita minima consequatur ratione iste et quae explicabo culpa aliquid, ea unde quasi tempora? Sed.</p>
 
-    </div>
+    </div> -->
 </body>
 <script src="./js/app.js"></script>
 </html>
